fix overflow/flexbox bugs on mobile

--- a/css/components/Drawing.scss
+++ b/css/components/Drawing.scss
@@ -1,9 +1,3 @@
-body {
-  // prevents the drag-to-refresh thing from happening int he mobile browser
-  // while you are tryingn to draw on the canvas.
-  overflow-y: hidden;
-}
-
 .QuestionOverlay {
   position: absolute;
   background-color: rgba(0, 0, 0, .5);
